*Empty MediaWiki Message*

--- a/محمد_هاشم_زماني.mw
+++ b/محمد_هاشم_زماني.mw
@@ -1,4 +1,4 @@
-محمدهاشم زماني په ١٣٠٧ لمريز (١٩٢٨ ميلادي)  کال کې د کنړ دولايت د لمټک په کلي کې د استقلال دچترال د جبهې د فاتح لوی خان غازي ميرزمان خان په کور کې زيږيدلی ؤو.  لمړنۍ زده کړې ئي په جومات او کور-کلي کې د وخت دعلماوو نه ترﻻسه کړې، اوشپاړس کلن ؤو چې د خپلی ټولی کورنۍ سره، چې شمير ئې د سلو کسانو نه زيات ؤو، د تش سياسي بند په نامه، د هغه وخت د رژيم لخوا د نورو ډيرو سياسي بنديانو په شان پرته له کوم جرم او محاکمې، ديوه نامعلومه سرنوشت په انتظار ددهمزنګ جهنمي زندان ته واستول شو.  
+'''محمد هاشم زماني''' په ١٣٠٧ لمريز (١٩٢٨ ميلادي)  کال کې د کنړ دولايت د لمټک په کلي کې د استقلال دچترال د جبهې د فاتح لوی خان غازي ميرزمان خان په کور کې زيږيدلی ؤو.  لمړنۍ زده کړې ئي په جومات او کور-کلي کې د وخت دعلماوو نه ترﻻسه کړې، اوشپاړس کلن ؤو چې د خپلی ټولی کورنۍ سره، چې شمير ئې د سلو کسانو نه زيات ؤو، د تش سياسي بند په نامه، د هغه وخت د رژيم لخوا د نورو ډيرو سياسي بنديانو په شان پرته له کوم جرم او محاکمې، ديوه نامعلومه سرنوشت په انتظار ددهمزنګ جهنمي زندان ته واستول شو.  
 
 نوي ځلمي محمد هاشم دخپلی ځوانۍ ديارلس کلونه ددهمزنګ د زندان په تورو او نمناکو خونو کې، د خپلې کورنۍ د غړو سره تير کړل. او ددهمزنګ په زندان کې  يو ګڼ شمير نورو سياسي بنديانو لکه د غلام نبي خان چرخي کورنۍ، يعقوب خان غونډ مشر، سرحدار عبدالغفار خان، سرور جويا، ډاکټر محمودي، ناظر- صفر، فرقه مشر غلام نبي خان ( مشهور په چپه شاخ )، او نورو سره معرفي او هم صحبته  شوو.  
 
