*Empty MediaWiki Message*

--- a/محمد_هاشم_زماني.mw
+++ b/محمد_هاشم_زماني.mw
@@ -1,4 +1,7 @@
-'''محمد هاشم زماني''' په ١٣٠٧ لمريز (١٩٢٨ ميلادي)  کال کې د کنړ دولايت د لمټک په کلي کې د استقلال دچترال د جبهې د فاتح لوی خان غازي ميرزمان خان په کور کې زيږيدلی ؤو.  لمړنۍ زده کړې ئي په جومات او کور-کلي کې د وخت دعلماوو نه ترﻻسه کړې، اوشپاړس کلن ؤو چې د خپلی ټولی کورنۍ سره، چې شمير ئې د سلو کسانو نه زيات ؤو، د تش سياسي بند په نامه، د هغه وخت د رژيم لخوا د نورو ډيرو سياسي بنديانو په شان پرته له کوم جرم او محاکمې، ديوه نامعلومه سرنوشت په انتظار ددهمزنګ جهنمي زندان ته واستول شو.  
+'''محمد هاشم زماني''' په ١٣٠٧ لمريز (١٩٢٨ ميلادي)  کال کې د کنړ دولايت د لمټک په کلي کې د استقلال دچترال د جبهې د فاتح [[غازي مير زمان خان]] په کور کې زيږيدلی ؤو.  
+
+== زده کړې ==
+لمړنۍ زده کړې ئي په جومات او کور-کلي کې د وخت دعلماوو نه ترﻻسه کړې، اوشپاړس کلن ؤو چې د خپلی ټولی کورنۍ سره، چې شمير ئې د سلو کسانو نه زيات ؤو، د تش سياسي بند په نامه، د هغه وخت د رژيم لخوا د نورو ډيرو سياسي بنديانو په شان پرته له کوم جرم او محاکمې، ديوه نامعلومه سرنوشت په انتظار ددهمزنګ جهنمي زندان ته واستول شو.  
 
 نوي ځلمي محمد هاشم دخپلی ځوانۍ ديارلس کلونه ددهمزنګ د زندان په تورو او نمناکو خونو کې، د خپلې کورنۍ د غړو سره تير کړل. او ددهمزنګ په زندان کې  يو ګڼ شمير نورو سياسي بنديانو لکه د غلام نبي خان چرخي کورنۍ، يعقوب خان غونډ مشر، سرحدار عبدالغفار خان، سرور جويا، ډاکټر محمودي، ناظر- صفر، فرقه مشر غلام نبي خان ( مشهور په چپه شاخ )، او نورو سره معرفي او هم صحبته  شوو.  
 
@@ -8,14 +11,17 @@
 
 زماني صاحب د خپلی کورنۍ سره د ١٣ کلونو سياسي بند نه وروسته هرات ته تبعيد، او ١٣٤٣ ميلادي کال کې د نوي اساسي قانون تر جوړيدو پوری د٨  کلونو دپاره  هلته دتبعيد ژوند تير کړ. 
 
-دخدای بښلي زماني ليکل شوي اشعار، مضامين او ادبي ټوټې د وطن په اکثرو ورځپاڼو، مجلو او اونيزونشراتو لکه  انيس، هيواد، اصلاح، وړانګه، سيستان، طلوع افغان، بيدار او اتفاق اسلام کې خپاره شويدي. 
+== ادبي ژوند ==
+د خدای بښلي زماني ليکل شوي اشعار، مضامين او ادبي ټوټې د وطن په اکثرو ورځپاڼو، مجلو او اونيزونشراتو لکه  انيس، هيواد، اصلاح، وړانګه، سيستان، طلوع افغان، بيدار او اتفاق اسلام کې خپاره شويدي. 
 
+== دندې ==
 زماني د ديموکراسۍ په لسيزه کې په قلمي مبارزه بوخت وو. او د داؤد خان د جمهوريت ددورې په لويه جرګه کې يي د کنړ د وکيل  په توګه برخه اخيستی وه. 
 
 محمدهاشم زماني د ١٩٧٩ ميلادي کال په وروستيو شپو-ورځو کې پيښور ته هجرت او هلته يي قلمي جهاد پيل کړ.  د هغوې  د جهاد لمړئ چاپ شوئ اثر قطبي خرس په انګريزي ژبه  ترجمه شوئ ، او بيا وروسته د انګريزي ترجمې ځينی برخی په فرانسوي، ايطالوي او هسپانوي ژبو هم اړول شويدي.  
 
 زماني د جهاد په دوران کې د هيواد دخپلواکۍ دپاره دهلو-ځلو په ترڅ کې په بين المللي کنفرانسونو او غونډو کې دګډون دپاره ګڼ شمير باندنيو هيوادونو ته سفرونه وکړل.  دوی په ١٩٨٧ کال کې د امريکی متحده ايالاتو ته مهاجر او د کاليفورنيا دايالت د سانفرانسيسکو د بې ايريا په سيمه کې د هيوارد په ښار کې ميشته شو. 
 
+== چاپ شوي آثار ==
 د ارواښاد محمد هاشم زماني د پښتو اودري ژبو ځينی اشعار د زنداني احساس، قطبي خرس، سړي خوړه بلا نه علاوه د ازادۍ مشال، دازادۍ ارمان، خواره ګلونه،او دسولی زمزمې نومی کتابونو کی راټول او چاپ شويدي.  
 
 که څه هم زماني په ١٩٩٠ کال  کې د زړه ددوهمی حملې او مغزو د سکتی له امله د اوږدی مودې په ناروغۍ اخته شوئ وو، او د وجود يوه خوا يې فلج شوی وه، دافغانستان د حالاتو او پيښو سره دژوند تر وروستۍ سلګۍ پورې تړلې وو او خپلو ادبي او فرهنګي فعاليتونو ته يې ادامه ورکړه. د خورو ګلونو دوهم ټوک او د زخمي زړه د اشعارو مجموعی يې وليکلی او د زنداني خاطراتو په نامه  د پښتو نثر کتاب يې چې ٢٨٨ مخونه لري هم چاپ کړ. 
@@ -24,3 +30,10 @@
  
 
 په اسلام، هيواد او ولس مين، مبارز- ليکوال او شاعر خدای بښلې محمد هاشم زماني د جمعی په مبارکه شپه د غبرګولي د مياشتی په ١٩ ( دجون د مياشتی په لسمه ) نيټه  د ٧٦ کلنۍ په عمر دزړه د ناڅاپي حملی له امله لدی فاني نړۍ نه سترګی پټې کړي. ددوې جنازه افغانستان ته انتقال او ددوې پلرني ټاټوبي کنړ کې خاورو ته وسپارل شوه
+
+
+[[وېشنيزه:پښتانه]]
+[[وېشنيزه:پښتانه شاعران]]
+[[وېشنيزه:پښتانه ليکوال]]
+[[وېشنيزه:افغانان]]
+[[وېشنيزه:افغاني ليکوال]]
