--- a/محمد_هاشم_زماني.mw
+++ b/محمد_هاشم_زماني.mw
@@ -1,4 +1,8 @@
-'''محمد هاشم زماني''' په ١٣٠٧ لمريز (١٩٢٨ ميلادي)  کال کې د کنړ دولايت د لمټک په کلي کې د استقلال دچترال د جبهې د فاتح [[غازي مير زمان خان]] په کور کې زيږيدلی ؤو.  
+[[انځور:Mohammad-Hashim-Zamani.jpg|thumb|289px|محمد هاشم زماني]]
+'''محمد هاشم زماني''' (''انګرېزي: Muhammad Hashem Zamani'') (١٣٠٧ هـ.ل. = ۱۹۲۸ ز. - ) يو افغان ليکوال او شاعر ؤ. 
+
+== مخينه ==
+په ١٣٠٧ لمريز (١٩٢٨ ميلادي)  کال کې د کنړ دولايت د لمټک په کلي کې د استقلال دچترال د جبهې د فاتح [[غازي مير زمان خان]] په کور کې زيږيدلی ؤو.  
 
 == زده کړې ==
 لمړنۍ زده کړې ئي په جومات او کور-کلي کې د وخت دعلماوو نه ترﻻسه کړې، اوشپاړس کلن ؤو چې د خپلی ټولی کورنۍ سره، چې شمير ئې د سلو کسانو نه زيات ؤو، د تش سياسي بند په نامه، د هغه وخت د رژيم لخوا د نورو ډيرو سياسي بنديانو په شان پرته له کوم جرم او محاکمې، ديوه نامعلومه سرنوشت په انتظار ددهمزنګ جهنمي زندان ته واستول شو.  
