*Empty MediaWiki Message*

--- a/محمد_هاشم_زماني.mw
+++ b/محمد_هاشم_زماني.mw
@@ -1,5 +1,5 @@
 [[انځور:Mohammad-Hashim-Zamani.jpg|thumb|289px|محمد هاشم زماني]]
-'''محمد هاشم زماني''' (''انګرېزي: Muhammad Hashem Zamani'') (١٣٠٧ هـ.ل. = ۱۹۲۸ ز. - ) يو افغان ليکوال او شاعر ؤ. 
+'''محمد هاشم زماني''' (''انګرېزي: Muhammad Hashem Zamani'') (١٣٠٧ هـ.ل. = ۱۹۲۸ ز. - ۱۳۸۴ هـ.ل. = ۲۰۰۵ ز.) يو افغان ليکوال او شاعر ؤ. 
 
 == مخينه ==
 په ١٣٠٧ لمريز (١٩٢٨ ميلادي)  کال کې د کنړ دولايت د لمټک په کلي کې د استقلال دچترال د جبهې د فاتح [[غازي مير زمان خان]] په کور کې زيږيدلی ؤو.  
