/* چاپ شوي آثار */

--- a/محمد_هاشم_زماني.mw
+++ b/محمد_هاشم_زماني.mw
@@ -32,8 +32,8 @@
 
 ارواښاد محمد هاشم زماني تل هيله درلوده چې روغتيايي حالت يې لږ څه ښه شي، بيرته وطن ته ستون شي او د خپل ګران هيواد او درديدلو هيوادوالو خدمت ته دوام ورکړي. ددوی يواثر همدا د پوهنی  ملي انقلاب نوميږي چې  د مرګ  تر شپی يې ددغه اثر په دوهم ټوک کار کاوه. 
  
-
-په اسلام، هيواد او ولس مين، مبارز- ليکوال او شاعر خدای بښلې محمد هاشم زماني د جمعی په مبارکه شپه د غبرګولي د مياشتی په ١٩ ( دجون د مياشتی په لسمه ) نيټه  د ٧٦ کلنۍ په عمر دزړه د ناڅاپي حملی له امله لدی فاني نړۍ نه سترګی پټې کړي. ددوې جنازه افغانستان ته انتقال او ددوې پلرني ټاټوبي کنړ کې خاورو ته وسپارل شوه
+== مړينه ==
+په اسلام، هيواد او ولس مين، مبارز- ليکوال او شاعر خدای بښلې محمد هاشم زماني د جمعی په مبارکه شپه د غبرګولي د مياشتی په ١٩ ( دجون د مياشتی په لسمه ) ۱۳۸۴ هـ. ل. کال د ٧٦ کلنۍ په عمر د زړه د ناڅاپي حملی له امله له دی فاني نړۍ نه سترګی پټې کړي. ددوې جنازه افغانستان ته انتقال او ددوې پلرني ټاټوبي کنړ کې خاورو ته وسپارل شوه
 
 
 [[وېشنيزه:پښتانه]]
