*Empty MediaWiki Message*

--- a/محمد_هاشم_زماني.mw
+++ b/محمد_هاشم_زماني.mw
@@ -26,6 +26,7 @@
 زماني د جهاد په دوران کې د هيواد دخپلواکۍ دپاره دهلو-ځلو په ترڅ کې په بين المللي کنفرانسونو او غونډو کې دګډون دپاره ګڼ شمير باندنيو هيوادونو ته سفرونه وکړل.  دوی په ١٩٨٧ کال کې د امريکی متحده ايالاتو ته مهاجر او د کاليفورنيا دايالت د سانفرانسيسکو د بې ايريا په سيمه کې د هيوارد په ښار کې ميشته شو. 
 
 == چاپ شوي آثار ==
+[[انځور:Mohammad-Hashem-Zamani.jpg|thumb|289px|محمد هاشم زماني]]
 د ارواښاد محمد هاشم زماني د پښتو اودري ژبو ځينی اشعار د زنداني احساس، قطبي خرس، سړي خوړه بلا نه علاوه د ازادۍ مشال، دازادۍ ارمان، خواره ګلونه،او دسولی زمزمې نومی کتابونو کی راټول او چاپ شويدي.  
 
 که څه هم زماني په ١٩٩٠ کال  کې د زړه ددوهمی حملې او مغزو د سکتی له امله د اوږدی مودې په ناروغۍ اخته شوئ وو، او د وجود يوه خوا يې فلج شوی وه، دافغانستان د حالاتو او پيښو سره دژوند تر وروستۍ سلګۍ پورې تړلې وو او خپلو ادبي او فرهنګي فعاليتونو ته يې ادامه ورکړه. د خورو ګلونو دوهم ټوک او د زخمي زړه د اشعارو مجموعی يې وليکلی او د زنداني خاطراتو په نامه  د پښتو نثر کتاب يې چې ٢٨٨ مخونه لري هم چاپ کړ. 
