*Empty MediaWiki Message*

--- a/عبدالوکيل_سوله_مل_شينواری.mw
+++ b/عبدالوکيل_سوله_مل_شينواری.mw
@@ -1,4 +1,4 @@
-'''عبدالوکيل سوله مل شينواری''' 
+'''عبدالوکيل سوله مل شينواری''' (۱۳۴۳ هـ.ل.) يو افغان کيسه ليکوال او اديب دی. نوموړي په ګڼ شمېر رسنيو کې خپلې ليکنې خپرې کړي.
 
 
 == مخينه ==
