--- a/عبدالوکيل_سوله_مل_شينواری.mw
+++ b/عبدالوکيل_سوله_مل_شينواری.mw
@@ -2,8 +2,15 @@
 
 
 == مخينه ==
-په کال ١٣٤٣ ل کي د ننګرهار ولايت د هسکي مېني په ولسوالۍ کې زېږيدلی دی ، لومړنۍ او منځنۍ زده کړي يې په جلال اباد ښار کي کړيدي ، تر منځنۍ زده کړو وروسته د لوړو زده کړو لپاره پخواني شوروي اتحاد ته وليږل شو ، په عسکري پيداکوژۍ کي د ماسټرۍ درجې د اخستني وروسته په کال ١٣٦٨ل کي خپل هيواد ته راستون شو او د افغانستان د ملي دفاع وزارت په بېلابېلو روزنيزو موسسو کي يې د ښوونکي په توګه دندي اجرا کړې . په کال ١٣٧٣ ل په پېښور کي د ازاد افغانستان د ليکوالو د ټولني په خپرنيز ارګان ( وفا ) کي خبريال شو ، په ١٩٩٥ میلادی کال يې دغه دنده پرېښوده او د سلواک جمهوريت ته ولاړ او تر ۲۰۰۷میلادی کال ترمای هلته اووسید خو له دغې نیټې وروسته انګلیستان ته راغئ او اوس په لندن کې هستوګن دی
+په کال ١٣٤٣ ل کي د ننګرهار ولايت د هسکي مېني په ولسوالۍ کې زېږيدلی دی. 
 
+== زده کړې ==
+لومړنۍ او منځنۍ زده کړي يې په جلال اباد ښار کي کړيدي ، تر منځنۍ زده کړو وروسته د لوړو زده کړو لپاره پخواني شوروي اتحاد ته وليږل شو، په عسکري پيداکوژۍ کي د ماسټرۍ درجه اخيستې.
+
+== دندې ==
+له زده کړو وروسته په ١٣٦٨ل کال کي خپل هيواد ته راستون شوی او د افغانستان د ملي دفاع وزارت په بېلابېلو روزنيزو موسسو کي يې د ښوونکي په توګه دندي اجرا کړې . په کال ١٣٧٣ ل په پېښور کي د ازاد افغانستان د ليکوالو د ټولني په خپرنيز ارګان (وفا) کي خبريال شو ، په ١٩٩٥ میلادی کال يې دغه دنده پرېښوده او د سلواک جمهوريت ته ولاړ او تر ۲۰۰۷میلادی کال ترمای هلته اووسید خو له دغې نیټې وروسته انګلیستان ته راغئ او اوس په لندن کې هستوګن دی
+
+== ادبي ژوند ==
 وکيل شينواری تر اوسه پوري ګڼ شمير پوهنيزي څېړني ، تحليلي ، سياسي او ادبي ليکني کړيدي ، چي تر هيواد دننه او بهر په ګڼ شمير افغاني خپرونو کي خپرې شويدي ، په روسي او سلواکي ژبو پوهيږي او په پارسي کي د ليکني صلاحيت لري .  
 ښاغلي عبدالوکيل سوله مل شينواری هغه ځوان کيسه ليکونکی دی چي په لنډو کيسو سربېره يې لنډي اواوږدې راډيويي او تلويزيوني ډرامې هم کښلي دي د ( غچ اور ) راډيو داستان يې ښه بېلګه ده .چې ډير کلونه پخوا چي لا د ښوونځی په لسم ټولګۍ کي و ، وليکه اوپه هماغه وخت ( ١٣٥٨ ل ) کي له افغانستان راډيو پرله پسې خپورشو . 
 نوموړی هم لکه دافغانستان ډير ليکوال خپل ادبي تخليق په شعرپيل کړي ، خو د شعر او ډرامې ليکلو موده يې ډيره لنډه وه . 
