--- a/پير_محمد_کاروان.mw
+++ b/پير_محمد_کاروان.mw
@@ -16,17 +16,17 @@ _ګلې خوشبوی درحمام روزې
 
 رسيدازدست محبوبې بدستم
 
-بدوګفتم که مشکی ياعبيری
+بدوګفتم که مشکی ياعنبری
 
-که ازبوی دلاويزتومستم
+که ازبوی دلاويز تو مستم
 
-بګفتامن ګل ناچيزبودم
+بګفتا من ګل ناچيز بودم
 
 وليکن مدتی باګل نشستم
 
-جمال همنشين درمن اثرکرد
+جمال همنشين در من اثر کرد
 
-وګرنه من همان خاکم که هستم
+و ګر نه من همان خاکم که هستم
 
 داشعرچې ملاصاحب په پښتوراته تشريح کړپه هماغه ماشومتوب کې يې سخت خوندراکړ.په هغه وخت کې به چې زه سبق ته تلم دماشومتوب له شوخۍ نه هم په آمان نه وم.په بډه کې به مې لينده راسره وه.کله به چې له سبق نه دخپل کورپه لورراروان شوم نولمربه پرکلي سروهلی ؤ.په لاره کې به بامبوټيواوونوکې مرغۍ څارلې چې ګوندې يوه خوپکې وولم.په همدې سهارچې زه دسعدي دپورتني عاشقانه اومفکرانه
 
