*Empty MediaWiki Message*

--- a/محمد_افضل_شوق.mw
+++ b/محمد_افضل_شوق.mw
@@ -1,4 +1,4 @@
- محمد افضل شوق يو پښتون شاعر، کيسه ليکوال او سېلانی څېړونکی دی. 
+'''محمد افضل شوق''' يو پښتون شاعر، کيسه ليکوال او سېلانی څېړونکی دی. 
 
 == مخينه ==
 هغه په پښتونخوا کې زېږېدی دی. هغه د څلور زامنو پلار دی چې هر يو يې د عزيز، قام، حکمت او د پښتو ژبې سندرغاړی اولس يار خان په نامه يادېږي.
