*Empty MediaWiki Message*

--- a/محمد_افضل_شوق.mw
+++ b/محمد_افضل_شوق.mw
@@ -1,3 +1,4 @@
+[[انځور:Afzal-Shawq.jpg|thumb|289px|محمد افضل شوق]]
 '''محمد افضل شوق''' يو پښتون شاعر، کيسه ليکوال او سېلانی څېړونکی دی. 
 
 == مخينه ==
