--- a/پير_محمد_کاروان.mw
+++ b/پير_محمد_کاروان.mw
@@ -50,7 +50,7 @@ _څنګه زړه دې دی چې نورسبق ووايې؟
 
 وړاندې يې وويل:
 
-_زه ډيرخوشحاله يم چې سږکال دخوست ميخانيکي ليسې ته داسې شاګردان کامياب شوي چې دواسطې اودپيسوزورنه لري،دوی په خپل لياقت کامياب شوي دي.مخکې له دې چې زه يې نومونه واخلم ټولوته مبارکي وايم.په دې وخت کې زمازړه لکه پاڼه داسې رپيده.نه پوهيدم چې کامياب به يم کنه؟په زړه کې مې قوت پيداکاوه چې که خامخا کامياب نه وم،نوخپله اراده بايدونه بايلم،په سترګوکې مې اوښکې رانه شي او اودخپلوهمصنفيانوپه وړاندې ونه شرميږم.په دې وخت کې معلم صاحب دکاميابوشاګردانودنومونوپه اخيستلوپيل وکړ.زموږله صنف نه ډيروکسانوامتحانونه ورکړي وو.زماغوندې بې واسطې کسانوهم اودواسطوولاووهم.معلم له يوه دوه نومونووروسته زمانوم واخيست.
+زه ډيرخوشحاله يم چې سږکال دخوست ميخانيکي ليسې ته داسې شاګردان کامياب شوي چې دواسطې اودپيسوزورنه لري،دوی په خپل لياقت کامياب شوي دي.مخکې له دې چې زه يې نومونه واخلم ټولوته مبارکي وايم.په دې وخت کې زمازړه لکه پاڼه داسې رپيده.نه پوهيدم چې کامياب به يم کنه؟په زړه کې مې قوت پيداکاوه چې که خامخا کامياب نه وم،نوخپله اراده بايدونه بايلم،په سترګوکې مې اوښکې رانه شي او اودخپلوهمصنفيانوپه وړاندې ونه شرميږم.په دې وخت کې معلم صاحب دکاميابوشاګردانودنومونوپه اخيستلوپيل وکړ.زموږله صنف نه ډيروکسانوامتحانونه ورکړي وو.زماغوندې بې واسطې کسانوهم اودواسطوولاووهم.معلم له يوه دوه نومونووروسته زمانوم واخيست.
 
 له ډيرې خوشحالۍ نه مې په سترګوکې اوښکې راغلې.اوهم صنفيانومې چکچکې راته
 
@@ -74,7 +74,7 @@ _زه ډيرخوشحاله يم چې سږکال دخوست ميخانيکي لي
 
 يودرداوخپګان لري.
 
-  يوه ورځ له کندهارنه دخوست په نيت کابل ته په سه صدودو(٣٠٢)موټرکې روان وم.په زړه کې خوشحاله وم .په لاره مې يوه نوې مجله لوستله.زه له پخوانه دموټرداسې سفرته خوشحاليږم چې يوازې وم اودخپل څنګ ملګری ونه پېژنم.په دې ورځ هم همداسې يوازې وم .په موټرکې ترمطالعې وروسته به مې په اصطلاح خواږه خيال پلوونه وهل.موټربه له ميدان وردګوتېرشوی وي چې زه خوب وړی يم.دخلکوپه شوراوګونګوسي پسې ناڅاپه راويښ شوم.دخلکوپه څيروکې مې عجبې پوښتنې وليدې.ټول حيران وواوغوږونه يې څک کړي وو.ما دڅنګ له سورلۍپوښتنه وکړه چې يه وروره داڅه خبره ده چې ټول داسې اوتراوترياست؟راته ويې ويل راډيوته غوږشه په هرڅه به پوی شې.راډيوته مې غوږکېښود.دموټرپه راډيوکې دملي اتڼ نغمې وې.زه غوږغوږيم خوڅه خبره اويااعلان نه کوي.سرپه سرله څونغمووروسته راډيوداسې اعلان وکړ:
+يوه ورځ له کندهارنه دخوست په نيت کابل ته په سه صدودو(٣٠٢)موټرکې روان وم.په زړه کې خوشحاله وم .په لاره مې يوه نوې مجله لوستله.زه له پخوانه دموټرداسې سفرته خوشحاليږم چې يوازې وم اودخپل څنګ ملګری ونه پېژنم.په دې ورځ هم همداسې يوازې وم .په موټرکې ترمطالعې وروسته به مې په اصطلاح خواږه خيال پلوونه وهل.موټربه له ميدان وردګوتېرشوی وي چې زه خوب وړی يم.دخلکوپه شوراوګونګوسي پسې ناڅاپه راويښ شوم.دخلکوپه څيروکې مې عجبې پوښتنې وليدې.ټول حيران وواوغوږونه يې څک کړي وو.ما دڅنګ له سورلۍپوښتنه وکړه چې يه وروره داڅه خبره ده چې ټول داسې اوتراوترياست؟راته ويې ويل راډيوته غوږشه په هرڅه به پوی شې.راډيوته مې غوږکېښود.دموټرپه راډيوکې دملي اتڼ نغمې وې.زه غوږغوږيم خوڅه خبره اويااعلان نه کوي.سرپه سرله څونغمووروسته راډيوداسې اعلان وکړ:
 
 داراډيوافغانستان کابل دی.زه حيران شوم ځکه هغه وخت به په راډيوکې داسې ويل کيدل:دآرياناافغانستان ملي راډيوتلويزيون.خير زه بيا هم اعلان ته څک شوم.په اعلان کې وويل شول:دنادري کورنۍوروستنۍ......داود دخپلواعمالوپه سزاورسول شو.دافغانستان واک دانقلابي شوری په لاس کې دی.څه نورې خبرې يې هم کولې.دايې هم ويل : څوک چې ستاسوپه وړاندې خنډکيږي شنډاوبې وسلې يې کړئ.داعلان کوونکي غږنری اوداسې ښځنوکی غوندې ؤ.بيايې وروسته داسلم وطنجارپه نوم ځان معرفي کړ.وروسته پوه شوم چې دداودخان پرنظام باندې داردومسلحانه کودتاوه چې دوی به ورته انقلاب وايه.دمازديګرلمرپه غرغره دی اوموږپه داسې يوه سره اوله غباره ډک شفق کې کابل ته رانږدې شوو.دموټرپه سورليوکې وارپه وارويره اوترهه ډيريده.دالوتکوکړنګيدونکوآوازونوځمکه لړزوله .کله کله دتوپونواودکلاشينکوف
 
@@ -82,11 +82,11 @@ _زه ډيرخوشحاله يم چې سږکال دخوست ميخانيکي لي
 
 ورور په ښارکې ګرځيدل پيل شول.په راډيوګانوکې همداسې دملي اتڼ نغمې اووطني سندرې خپريدې.دافغانستان خلک هرنوي بدلون ته خوشحاليږي .شوبلې دښارپه واټونوکې ولاړې وې.ځينووړونجونواوهلکانوبه ګلونه پرې شيندل چې يونيم ځوان اوځوانه نجلۍ به هم ددوی په ډله کې وه.کله چې له خپل ترورزي اودرحمان بابادليسې له شاګردانوسره دارګ خواته لاړم،نوپه نښترواونوروونوکې مې دوژل شويوعسکروغوښې وليدې په زړه کې ډيرخپه شوم.
 
-   شپه مې درحمان باباپه ليسه کې له خپل ترورزي بوستان اودرحمان باباله نوروشاګردانوسره ددوی په ليليه کې وکړه.په تلويزيون کې يې دنورمحمد تره کي له خندانه ډک تصويرونه ښودل.دخلقيانواوپرچميانونورکسان به هم کله کله دتلويزيون پرسکرين راغلل.دافغانستان تلويزيون نوی نوی دداودخان په وخت کې پخپله دداودخان په هلوځلوجوړؤ،چې په پای کې ددوی دقاتلانوڅيروپکې وخندل.
+شپه مې درحمان باباپه ليسه کې له خپل ترورزي بوستان اودرحمان باباله نوروشاګردانوسره ددوی په ليليه کې وکړه.په تلويزيون کې يې دنورمحمد تره کي له خندانه ډک تصويرونه ښودل.دخلقيانواوپرچميانونورکسان به هم کله کله دتلويزيون پرسکرين راغلل.دافغانستان تلويزيون نوی نوی دداودخان په وخت کې پخپله دداودخان په هلوځلوجوړؤ،چې په پای کې ددوی دقاتلانوڅيروپکې وخندل.
 
 دهمدې شپې په سهارخوست ته راروان شوم.غرمه مهال خوست ته راورسيدم.ماسپښين مهال خپل کلي نريزې ته روان شوم مازديګرچې لمرلانه ؤډوب شوی خپل کلي ته راورسيدم.دوه درې شپې مې په کلي کې وکړي،د١٣٥٧کال دثورپه يوولسمه نيټه زمونږله کلي نه يولښکرخلک له ټوپکوسره دتورخېلومدرسې ته روان شول.دتورخېلوپه مدرسه کې مولوي پيرمحمدروحاني دخلقي نظام پرضددمسلح جهاداعلان وکړ.خدای مې دې غاړه نه بندوي په همدې ورځ ووکه په سبايې ووپه ځدراڼوکې دحکومت ځينې مامورين چې فکرکوم ولسوال هم پکې وو،ووژل شول.
 
-  دانودهغه وخت ځغلنده يادونه وه.زه بياهم په کندهارکې په نخي نساجي کې وم چې يوبل غوبل جوړشو.دافغانستان پرحکومت شوروي اتحادمسلح بريدوکړ،حفيظ الله آمين يې وواژه اوببرک کارمل يې له شوروي نه پرشوبلوسپورراوړ.په همدې شپه يې دشوروي له يوې راډيودببرک کارمل وينا خپره کړه.په ويناکې يې شوروي فوځونه خپل ورونه بللي وو.وينايې ترډيره ځايه دحفيظ الله آمين له غندلوډکه وه.داټکی يې پکې ډير
+دانودهغه وخت ځغلنده يادونه وه.زه بياهم په کندهارکې په نخي نساجي کې وم چې يوبل غوبل جوړشو.دافغانستان پرحکومت شوروي اتحادمسلح بريدوکړ،حفيظ الله آمين يې وواژه اوببرک کارمل يې له شوروي نه پرشوبلوسپورراوړ.په همدې شپه يې دشوروي له يوې راډيودببرک کارمل وينا خپره کړه.په ويناکې يې شوروي فوځونه خپل ورونه بللي وو.وينايې ترډيره ځايه دحفيظ الله آمين له غندلوډکه وه.داټکی يې پکې ډير
 
 تکراراوه:آمين اي ميرغضب وخون اشام ازبين رفت.درې څلورورځې وروسته دشوروي فوځونوپرشوبلوبارکتارونه کندهارته هم راغلل.خلک ډيرخپه وو،هسې دشوروي فوځونوليدوته ولاړوو.عسکرترنولس کلنۍ نيولې تريوويشت کلنۍ معلوميدل.عسکرو
 
