--- a/نوروز_منگل.mw
+++ b/نوروز_منگل.mw
@@ -1,18 +1,17 @@
 [[انځور:نوروز_منګل.jpg|thumb|289px|نوروز منگل]]
-د ملي لوبډلې کپتان ، په ښي لاس بيټينگ او ورو بالينگ کوي
+نوروز منګل (''انګرېزي: Nowroz Mangal'') (۲۸ د نومبر ۱۹۸۴ ز. کال) د افغانستان د کرکېټ د ملي لوبډلې کپتان دی. هغه په ښي لاس بيټينګ او ورو بالينګ کوي.
 
-د ١٩٨٤ کال د نومبر په ٢٨ نېټه په کابل کې زيږدلى دى ، اصلآ د خوست اوسيدونکى دى
+== مخينه ==
+د ١٩٨٤ کال د نومبر په ٢٨ نېټه په کابل کې زيږدلى دى.
 
-د نوروز منگل په کپتانۍ کې د افغانستان کريکټ ملي لوبډلې د اسيا د دويمې درجې د شلو اوورونو اتلولي وگټله ، د دۀ په سرلارۍ کې افغانستان د ٢٠١١ کال نړيوالو اتلوليو د غوراوي يا انتخاب پنځم او څلورم پړاو وگاټه .
+== د کرکټ سپورټ ==
+اصلآ د خوست اوسيدونکى دى. د نوروز منګل په کپتانۍ کې د افغانستان کريکټ ملي لوبډلې د اسيا د دويمې درجې د شلو اوورونو اتلولي وګټله ، د دۀ په سرلارۍ کې افغانستان د ٢٠١١ کال نړيوالو اتلوليو د غوراوي يا انتخاب پنځم او څلورم پړاو وګاټه. د کريکټ په مشهور لوبغاړو کې د دۀ د خوښې لوبغاړى سچن ټنډولکر دى چې د هند په وتليو ستوريو کې ګڼل کيږي . نوروز منګل تر اوسه په نړيوالو لوبو کې د افغانستان لپاره د ٣١ مندو په اوسط ٨٣٧ مندې جوړې کړي چې تر ټولو ډيرې يې ٧٨ منډي دي . دۀ ١٦ مخالف لوبغاړي هم سوځولي چې تر ټولو ښه لوبه يې د ٢٤ منډو په بدل کې د پنځو لوبغاړو سوځول و ، په بالينګ کې د دۀ اوسط د ١٩ منډو دى .
 
-د کريکټ په مشهور لوبغاړو کې د دۀ د خوښې لوبغاړى سچن ټنډولکر دى چې د هند په وتليو ستوريو کې گڼل کيږي .
-
-نوروز منگل تر اوسه په نړيوالو لوبو کې د افغانستان لپاره د ٣١ مندو په اوسط ٨٣٧ مندې جوړې کړي چې تر ټولو ډيرې يې ٧٨ منډي دي .
-
-دۀ ١٦ مخالف لوبغاړي هم سوځولي چې تر ټولو ښه لوبه يې د ٢٤ منډو په بدل کې د پنځو لوبغاړو سوځول و ، په بالينگ کې د دۀ اوسط د ١٩ منډو دى .
-
-
+== سرچينې ==
+*د بي بي سي پښتو وېبپاڼه
 
 
 [[وېشنيزه:د کرکټ ملي لوبډله]]
 [[وېشنيزه:پښتانه]]
+
+[[en:Nowroz Mangal]]
