--- a/نوروز_منگل.mw
+++ b/نوروز_منگل.mw
@@ -1,5 +1,5 @@
 [[انځور:نوروز_منګل.jpg|thumb|289px|نوروز منگل]]
-نوروز منګل (''انګرېزي: Nowroz Mangal'') (۲۸ د نومبر ۱۹۸۴ ز. کال) د افغانستان د کرکېټ د ملي لوبډلې کپتان دی. هغه په ښي لاس بيټينګ او ورو بالينګ کوي.
+'''نوروز منګل''' (۲۸ د نومبر ۱۹۸۴ ز. کال) (''انګرېزي: Nowroz Mangal'') د افغانستان د کرکېټ د ملي لوبډلې کپتان دی. هغه په ښي لاس بيټينګ او ورو بالينګ کوي.
 
 == مخينه ==
 د ١٩٨٤ کال د نومبر په ٢٨ نېټه په کابل کې زيږدلى دى.
