*Empty MediaWiki Message*

--- a/محمد_نبي.mw
+++ b/محمد_نبي.mw
@@ -1,3 +1,4 @@
+[[انځور:محمد_نبي_عيساخېل.jpg|thumb|289px|محمد نبي عيسی خېل]]
 د افغانستان يو له هغو لوبغاړو چې د ايم سي سي له خوا يې هم لوبه کړې ده ،ښى لاسى منډه جوړونکى او ورو بالر
 د ١٩٨٥ کال د مارچ په اوومه نېټه په لوگر کې زيږيدلى دى
 
@@ -12,4 +13,3 @@
 
 د دۀ تر ټولو ډيرې مندې ١١٢ دي او تر ټولو ښه بالينگ يې د ٣٠ منډو په بدل کې د پنځو لوبغاړو سوځول و .
 [[وېشنيزه:د کرکټ ملي لوبډله]]
-[[انځور:محمد_نبي_عيساخېل.jpg‏ ]]
