*Empty MediaWiki Message*

--- a/گلبدين_نايب.mw
+++ b/گلبدين_نايب.mw
@@ -1,5 +1,6 @@
+[[انځور:ګلبدين_نايب.jpg|thumb|289px|ګلبدين نايب]]
+
 گلبدين نايب د افغانستان د كركټ ملي لوبډلې الراونډر دى ، دى تيز بالينگ کوي او تيزې منډې جوړوي ، دۀ له بهاما ټاپوگانو سره پنځه لوبغاړي وسوځول چې يو هم پکې هيټريک و چې په پرله پسې درو توپونو يې لوبغاړي پکې و سوځول . 
 
 
 [[وېشنيزه:د کرکټ ملي لوبډله]]
-[[انځور:ګلبدين_نايب.jpg]]
