*Empty MediaWiki Message*

--- a/نور_علي_ځدراڼ.mw
+++ b/نور_علي_ځدراڼ.mw
@@ -1,4 +1,5 @@
+[[انځور:نور_علي_ځدراڼ.jpg|thumb|289px|نور علي ځدراڼ]]
+
 نور علي ځدراڼ په پنځم نمبر بيټينگ کوي
 
 [[وېشنيزه:د کرکټ ملي لوبډله]]
-[[انځور:نور_علي_ځدراڼ.jpg]]
