*Empty MediaWiki Message*

--- a/محمد_اصغر_ستانکزی.mw
+++ b/محمد_اصغر_ستانکزی.mw
@@ -1,3 +1,5 @@
+[[انځور:محمد_اصغر_ستانکزی.jpg|thumb|289px|اصغر ستانکزی]]
+
 ښى لاسى منډه جوړونکى دى
 په ١٩٨٨ کال کې د لوگر په ولايت کې زيږيدلى دى .
 
@@ -10,4 +12,3 @@
 اصغر ستانکزي تر اوسه ٣٧٦ منډې کړي دي د دۀ تر ټولو ډيرې منډې ١٠٢ دي او اوسط يې ١٩.٧٨ دى . 
 
 [[وېشنيزه:د کرکټ ملي لوبډله]]
-[[انځور:محمد_اصغر_ستانکزی.jpg]]
