*Empty MediaWiki Message*

--- a/دولت_احمدزی.mw
+++ b/دولت_احمدزی.mw
@@ -1,3 +1,5 @@
+[[انځور:دولت احمدزی.jpg|thumb|289px|دولت احمدزی]]
+
 د ملي لوبډلې ښى لاسى تيز بالر دى
 د ١٩٨٤ کال د سپتمبر په پنځمه نېټه په لوگر کې زيږيدلى دى
 
@@ -9,4 +11,3 @@
 
 
 [[وېشنيزه:د کرکټ ملي لوبډله]]
-[[انځور:دولت احمدزی.jpg]]
