--- a/حميد_حسن.mw
+++ b/حميد_حسن.mw
@@ -1,3 +1,5 @@
+[[انځور:حمید حسن.jpg|thumb|289px|حمید حسن]]
+
 د افغانستان تر ټولو تيز بالر چې په انگلستان کې د ايم سي سي له خوا هم لوبې کړي دي
 
 د ١٩٨٧ کال د جون په لومړۍ نېټه ننگرهار کې زيږيدلى دى
@@ -19,4 +21,3 @@
 د دۀ تر ټولو ښه بالينگ د ٢٧ منډو په بدل کې د څلورو لوبغاړو سوځول و .
 
 [[وېشنيزه:د کرکټ ملي لوبډله]]
-[[انځور:حمید حسن.jpg]]
