*Empty MediaWiki Message*

--- a/کريم_صادق.mw
+++ b/کريم_صادق.mw
@@ -1,3 +1,5 @@
+[[انځور:کريم_صادق.jpg|thumb|289px|کريم صادق]]
+
 د ملي لوبډلې ويکټ ساتونکى او تکړه منډه جوړونکى ، دى هم ښى لاسى دى
 
 د ١٩٨٤ کال د فبروري په ١٨ نېټه په ننگرهار کې زيږيدلى دى
@@ -11,4 +13,3 @@
 کريم صادق تر اوسه د افغانستان لپاره ٧٤٢ مندې کړي دي او د منډو اوسط يې ٢٥.٥٨ دى .
 
 [[وېشنيزه:د کرکټ ملي لوبډله]]
-[[انځور:کريم_صادق.jpg]]
