*Empty MediaWiki Message*

--- a/ريس_احمدزی.mw
+++ b/ريس_احمدزی.mw
@@ -1,3 +1,5 @@
+[[انځور:ريس_احمدزی.jpg|thumb|289px|ريس احمدزی]]
+
 د ملي لوبډلې پخوانى کپتان ، په ښي لاس بيټينگ کوي
 د ١٩٨٤ کال د سپتمبر په شپږمه نېټه په لوگر ولايت کې زيږيدلى دى
 
@@ -15,4 +17,3 @@
 
 
 [[وېشنيزه:د کرکټ ملي لوبډله]]
-[[انځور:ريس_احمدزی.jpg]]
