*Empty MediaWiki Message*

--- a/رشيد_ځدراڼ.mw
+++ b/رشيد_ځدراڼ.mw
@@ -1,5 +1,5 @@
+[[انځور:رشيد ځدراڼ.jpg|thumb|289px|رشيد ځدراڼ]]
+
 رشيد ځدراڼ هم يو له ويکټ ساتونکو دى چې ډيره هيله ترې کيږي
 
 [[وېشنيزه:د کرکټ ملي لوبډله]]
-
-[[انځور:رشيد ځدراڼ.jpg]]
