*Empty MediaWiki Message*

--- a/تاج_ملوک.mw
+++ b/تاج_ملوک.mw
@@ -1,5 +1,5 @@
+[[انځور:تاج_ملوک.jpg|thumb|289px|تاج ملوک]]
+
 د ملي لوبډلې پخوانی روزونکى تاج ملوک 
 
 [[وېشنيزه:د کرکټ ملي لوبډله]]
-
-[[انځور:تاج_ملوک.jpg‏ ]]
