--- a/حبيب_الله_زړه_سواند.mw
+++ b/حبيب_الله_زړه_سواند.mw
@@ -20,9 +20,9 @@
 #''وينې پر ګلاب وينی'' د شعرونو غونډ
 
 == ناچاپه آثار ==
-#شاتو کې زهر لنډه کيسه
-#زه چې ماشوم وم لنډه کيسه
-#ګل شو پاڼې پاڼې د څلوريځو ټولګه
+#شاتو کې زهر د لنډو کيسو ټولګه
+#زه چې ماشوم وم د ماشومانو لپاره انتباهي کيسې
+#ګل شو پاڼې پاڼې د څلوريځو او غزلو ټولګه
 
 == د شعر يوه بېلګه ==
 <center>
